--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-uglify": "^0.10.1"
+    "grunt-contrib-uglify": "^0.10.1",
+    "grunt-jslint": "^1.1.14",
+    "grunt-ng-annotate": "^3.0.0"
   },
   "dependencies": {
     "grunt-contrib-copy": "^0.8.2",
